Fixed bugs: Deleting list, recommendation explanation overlap, scrolling on story, links in story, rating modal layout

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -687,7 +687,6 @@ video::-webkit-media-controls {
 // Styling for the modal
 .rating-modal {
 	min-height: 30%;
-	height: 32%;
 	width: 75%;
 	background-color: $background-color;
 	position: absolute;
@@ -697,8 +696,7 @@ video::-webkit-media-controls {
     text-align: center;
 
     .rating-content {
-    	position: relative;
-    	top: 20%;
+    	margin-top: 10%;
     }
 
     .star {
@@ -988,7 +986,7 @@ video::-webkit-media-controls {
 ion-slide .card {
 	width: 75%;
 	height: 75%;
-	margin: 10% auto;
+	margin: 8% auto;
 	position: relative;
 	text-align: center;
 	border-radius: 10px;
@@ -1006,18 +1004,22 @@ ion-slide .card {
 	z-index: 100;
 }
 
-ion-slide p.recommExplanation {
+ion-slide .recommExplanation {
+	height: 10vh;
 	width: 80%;
-	text-align: center;
 	position: absolute;
-	bottom: 3%;
+	bottom: 9%;
 	left: 50%;
 	-webkit-transform: translateX(-50%);
 	transform: translateX(-50%);
 
-	a {
-		display: inline-block;
-		padding: 5px 0;
+	p {
+		text-align: center;
+	
+
+		a {
+			padding: 5px 0;
+		}
 	}
 }
 
